fixed overflow issue!

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
 
 .hero {
   display: flex;
+  overflow: hidden;
   flex-direction: row;
   justify-content: center;
   width: auto;
